--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,7 +1,30 @@
- 
 <% if @name %>
+
 <h1>"My name is <%=@name%>"</h1>
 <% end %>
+
 <div style='border: dashed red'>
 <img src='https://i.imgur.com/jFaSxym.png' alt='image of cat'>
 </div>
+
+
+
+
+
+
+<%# <form action="/my-handling-form-page" method="post">
+ <ul>
+  <li>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="user_name">
+  </li>
+  <li>
+    <label for="mail">E-mail:</label>
+    <input type="email" id="mail" name="user_email">
+  </li>
+  <li>
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  </li>
+ </ul>
+</form> %>
