--- a/lib/views/cat_form.erb
+++ b/lib/views/cat_form.erb
@@ -1,4 +1,4 @@
-<form action="/named-cat" method="post">
-    <input type="text" name="name" >
+<form action="/cat-names" method="post">
+    <input type="text" name="name">
     <input type="submit" value="Submit">
 </form>
